<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/peopleListFragment">

    <fragment
        android:id="@+id/peopleListFragment"
        android:name="hr.ferit.dominikzivko.inspiringpeople.ui.people.PeopleListFragment"
        android:label="@string/fragment_people_list"
        tools:layout="@layout/fragment_people_list">
        <action
            android:id="@+id/action_peopleListFragment_to_personDetailsFragment"
            app:destination="@id/personDetailsFragment" />
        <action
            android:id="@+id/action_peopleListFragment_to_newPersonFragment"
            app:destination="@id/newPersonFragment" />
    </fragment>

    <fragment
        android:id="@+id/personDetailsFragment"
        android:name="hr.ferit.dominikzivko.inspiringpeople.ui.person.PersonDetailsFragment"
        android:label="@string/fragment_person_details"
        tools:layout="@layout/fragment_person_details">
        <argument
            android:name="personId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/newPersonFragment"
        android:name="hr.ferit.dominikzivko.inspiringpeople.ui.newPerson.NewPersonFragment"
        android:label="@string/fragment_new_person"
        tools:layout="@layout/fragment_new_person">
    </fragment>

</navigation>