<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="hr.ferit.dominikzivko.inspiringpeople.ui.newPerson.NewPersonViewModel" />
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newPerson.NewPersonFragment"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium">

            <EditText
                android:id="@+id/et_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_person_name"
                android:text="@={viewModel.person.name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium">

            <EditText
                android:id="@+id/et_birthday_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_person_birthday"
                android:text="@={viewModel.person.birthDate}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_person"
            android:layout_gravity="center"
            android:onClick="@{_ -> viewModel.savePerson()}"/>

    </LinearLayout>
</layout>